-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b29
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056405 | emb-9 | Tobias Hartmann | P3 | Resolved | Fixed | b29 |
| JDK-8063413 | 8u45 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8054894 | 8u40 | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8070969 | emb-8u47 | Tobias Hartmann | P3 | Resolved | Fixed | team |
| JDK-8057180 | emb-8u26 | Tobias Hartmann | P3 | Resolved | Fixed | b22 |
ILW = MLH = P3
- backported by
-
JDK-8054894 "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes
-
- Resolved
-
-
JDK-8056405 "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes
-
- Resolved
-
-
JDK-8057180 "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes
-
- Resolved
-
-
JDK-8063413 "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes
-
- Resolved
-
-
JDK-8070969 "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes
-
- Resolved
-
- relates to
-
JDK-8029443 'assert(klass->is_loader_alive(_is_alive)) failed: must be alive' during VM_CollectForMetadataAllocation
-
- Resolved
-
-
JDK-8055751 TestAnonymousClassUnloading.java needs to copy additional WhiteBox class file to JTwork/scratch/sun/hotspot
-
- Resolved
-