8054402: "klass->is_loader_alive(_is_alive)) failed: must be alive" for anonymous classes

Because anonymous classes are not in the system dictionary, we have to set 'unloading_occurred' based on 'CLDG::do_unloading()'. Added jtreg test.

Reviewed-by: kvn, coleenp